[gd_scene load_steps=11 format=2]

[ext_resource path="res://sample_scene.gd" type="Script" id=1]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.77027, 1 )
colors = PoolColorArray( 0.96875, 0.89688, 0.132446, 1, 0.968627, 0.196599, 0.0941177, 1, 0.378906, 0.0399628, 0.0399628, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 16.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 150.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.0
color_ramp = SubResource( 2 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.734234, 1 )
colors = PoolColorArray( 0.386719, 1, 1, 1, 0.430146, 0.281525, 0.960938, 1, 0.153827, 0.0399628, 0.378906, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 1
emission_sphere_radius = 16.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 150.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.0
color_ramp = SubResource( 5 )

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.743243, 1 )
colors = PoolColorArray( 0.9375, 0.861683, 0.754395, 1, 0.5625, 0.329041, 0.188965, 1, 0.136719, 0.0515282, 0.00534058, 0 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
emission_shape = 1
emission_sphere_radius = 16.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 150.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.0
color_ramp = SubResource( 8 )

[node name="sample_scene" type="Node2D"]
script = ExtResource( 1 )

[node name="controls" type="MarginContainer" parent="."]
margin_right = 1280.0
margin_bottom = 72.0
custom_constants/margin_top = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="controls"]
margin_top = 32.0
margin_right = 1280.0
margin_bottom = 72.0
custom_constants/separation = 100
alignment = 1

[node name="fire_toggle" type="CheckButton" parent="controls/HBoxContainer"]
margin_left = 286.0
margin_right = 390.0
margin_bottom = 40.0
text = "Fire"

[node name="water_toggle" type="CheckButton" parent="controls/HBoxContainer"]
margin_left = 490.0
margin_right = 608.0
margin_bottom = 40.0
text = "Water"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="earth_toggle" type="CheckButton" parent="controls/HBoxContainer"]
margin_left = 708.0
margin_right = 820.0
margin_bottom = 40.0
text = "Earth"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cast" type="Button" parent="controls/HBoxContainer"]
margin_left = 920.0
margin_right = 994.0
margin_bottom = 40.0
text = "Cast spell"

[node name="fire_particles" type="Particles2D" parent="."]
position = Vector2( 192, 360 )
emitting = false
amount = 100
one_shot = true
process_material = SubResource( 3 )

[node name="water_particles" type="Particles2D" parent="."]
position = Vector2( 640, 360 )
emitting = false
amount = 100
one_shot = true
process_material = SubResource( 6 )

[node name="earth_particles" type="Particles2D" parent="."]
position = Vector2( 1088, 360 )
emitting = false
amount = 100
one_shot = true
process_material = SubResource( 9 )
